Fix spacing on category and solution show pages

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -151,7 +151,7 @@ h1.govuk-heading {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
-  padding: 20px 0;
+  padding: 30px 0;
   border-bottom: 1px solid #b1b4b6;
 }
 
@@ -159,8 +159,8 @@ h1.govuk-heading {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-bottom: 20px;
 }
+
 .subcategory-filters {
   flex: 1;
 }
